# se4ds

./: README.md  api_functions.py  errata.md
example/ch01/: ch01.ipynb
example/ch02/: ch02.ipynb  memray-flamegraph-mode_using_counter.py.8331.html  time_mode.py
example/ch03/: ch03.ipynb  ch03_1_native.ipynb  ch03_2_numpy.ipynb  ch03_3_pandas.ipynb  ch03_native_python.ipynb.old  ch03_numpy.ipynb.old
example/ch04/: ch04.ipynb  csv_file
example/ch05/: ch05.ipynb  ch05_debug1.py  ch05_debug2_print.py  ch05_debug3_log.py  ch05_debugger.ipynb  ch05_debugger.py  ch05_debugger_pdb.py  ch05_logging1_timestamp.py  ch05_logging2_errmes.py
example/ch06/: ch06.ipynb  imports_sample-origin.py  mode_using_counter.py  mode_using_counter_incorrect.py  plot_big_o_after.py  plot_big_o_origin.py
example/ch07/: ch07_pandera.ipynb  integration.py  test_integration.py
example/ch07/test2-unexpected/: ch07_functions2.py  test_weighted_mean.py
example/ch07/test3-pytest-success/: ch07_functions1.py  test_weighted_mean.py
example/ch07/test4-pytest-fail/: test_fit_trendline.py  test_weighted_mean.py
example/ch08/: ch08.ipynb  coupling.py  coupling_non.py  test_weighted_mean.py  test_weighted_mean_builtin.py  weighted_mean.py  weighted_mean_builtin.py
example/ch09/: Untitled.ipynb  ch09.ipynb
example/ch10/: pyproject.toml
example/ch10/poetry-test/SE_for_DS/: pyproject.toml
example/ch11/: ch11.ipynb  ch11_api.py  ch11_install.sh
example/ch12/docker/: Dockerfile  ch11_functions.py  requirements.txt
example/ch15/: test_weighted_mean.py  weighted_mean_function.py
(+6 files in other folders)
